<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:ellipsize="end"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_search"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_search"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            app:layout_constraintLeft_toRightOf="@+id/editText_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
                android:id="@+id/list_container"
                layout="@layout/view_movie_list"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/seven_grid_unit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>