<resources>
    <string name="app_name">My Binge List</string>

    <!-- Search screen -->
    <string name="search_empty_place_holder">Please enter a genre to find movies e.g. Action</string>
    <string name="search_hint">Enter genre</string>
    <string name="search_button">Search</string>

    <string name="menu_favorites">Favorites</string>
    <!-- Search screen messages -->
    <string name="txt_edit_no_input">A genre must be provided to perform a search</string>
    <string name="menu_favorites2">Favorites</string>


    <!-- Favorites screen -->
    <string name="favorites_title">Favorite movies</string>
    <string name="favorites_empty_place_holder">There are no favorite movies!</string>
</resources>
