<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_width="@dimen/twenty_grid_unit"
        >

        <ImageView
            android:id="@+id/imageView_movieListItem_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:adjustViewBounds="true"
            tools:layout_height="224dp" />

        <ImageView
            android:id="@+id/imageView_movieListItem_star"
            android:layout_width="@dimen/five_grid_unit"
            android:layout_height="@dimen/five_grid_unit"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/two_grid_unit"
            android:src="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/imageView_movieListItem_favorite"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/seven_grid_unit"
            android:adjustViewBounds="true"
            android:state_selected="false"
            android:src="@drawable/selector_favorite"
            app:srcCompat="@drawable/selector_favorite" />
    </FrameLayout>
</layout>
