<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_movieList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             /> <!-- android:visibility="gone"-->

        <ProgressBar
            android:id="@+id/progressBar_movieList_loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_movieList_callToAction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/seven_grid_unit"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/search_empty_place_holder"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_large_material" />

        <TextView
                android:id="@+id/textView_movieList_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/seven_grid_unit"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/search_empty_place_holder"
                android:textColor="@color/accentColor"
                android:textSize="@dimen/text_size_large_material"
                android:visibility="gone"/>
    </FrameLayout>
</layout>